ft: add  republish request

--- a/app/views/volunter_notifier_mailer/volunted_to_request.html.erb
+++ b/app/views/volunter_notifier_mailer/volunted_to_request.html.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p>
-      <%= @user.first_name %> <%= @user.last_name %>. Volunted to your request <%= @request.title %>
+     New User Volunted to your request <%= @request.title %>
     </p>
   </body>
 </html>
